Closed Bug 461610 Opened 16 years ago Closed 16 years ago

Bookmark drag and drop is canceled when dragging over another row in search results

Categories

(Camino Graveyard :: Bookmarks, defect)

All
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino2.0

People

(Reporter: ishermandom+bugs, Assigned: stuart.morgan+bugzilla)

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X 10.4; en; rv:1.9.0.4pre) Gecko/2008101818 Camino/2.0a1 (like Firefox/3.0.4pre) Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X 10.4; en; rv:1.9.0.4pre) Gecko/2008101818 Camino/2.0a1 (like Firefox/3.0.4pre) If you search for bookmarks, the first search result can be drag&dropped, but the rest cannot. Reproducible: Always Steps to Reproduce: 1. Open bookmarks manager 2. Search for something with multiple results 3. Try to drag a result other than the first one to, e.g., the URL bar Actual Results: Bookmark starts to drag for a few pixels, but then jumps back. Expected Results: Bookmark drags
Tweaking summary; any bookmark can be dragged, but only until it crosses another row. If you drag out sideways first, any row works fine. I'm not confirming because I thought we had a bug about weird behavior in the search results, but I'm not seeing it.
Summary: Bookmark drag&drop only works for first bookmark in search results → Bookmark drag&drop is canceled when dragging over another row
10/25/08 12:34:28 AM Camino[2937] Error *** -[NSCFArray isSmartFolder]: unrecognized selector sent to instance 0x5e5ebf0 10/25/08 12:34:28 AM Camino[2937] Warning *** Canceling drag because exception 'NSInvalidArgumentException' (reason '*** -[NSCFArray isSmartFolder]: unrecognized selector sent to instance 0x5e5ebf0') was raised during a dragging session
(In reply to comment #1) > I'm not confirming because I thought we had a bug about weird behavior in the > search results, but I'm not seeing it. There was one where you couldn't do something with the first item in the search results (because we thought it was the folder), which I can't find but am sure we've fixed. There was also bug 283615 and bug 294237. Oddly enough, dragging works fine in 1.6.4 on 10.3.9 when there's no tab bar, whereas it's broken entirely in 1.6.4 (and 2.0a1) on 10.5.5. I sorta thought this used to work, too, but quick testing shows not recently.
Summary: Bookmark drag&drop is canceled when dragging over another row → Bookmark drag and drop is canceled when dragging over another row in search results
I may well have been thinking of bug 283615; let's go ahead and confirm (thanks for searching)
Status: UNCONFIRMED → NEW
Ever confirmed: true
Thanks to murph teaching me the new way to break on exceptions on 10.5, I can tell that we're throwing the exception in BookmarkViewController here (1494): > 1492 // if the proposed item's parent is a smart folder, deny the drop > 1493 BookmarkFolder* parent = (item) ? item : [self itemTreeRootContainer]; > 1494 if ([parent isSmartFolder]) > 1495 return NSDragOperationNone;
Hrm. Why doesn't a BookmarkFolder* respond to |isSmartFolder|, potentially?
Hardware: Macintosh → All
Attached patch fixSplinter Review
Handle drop validation in search mode.
Assignee: nobody → stuart.morgan+bugzilla
Attachment #344785 - Flags: superreview?(mikepinkerton)
Attachment #344785 - Flags: superreview?(mikepinkerton) → superreview+
Landed on CVS trunk.
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → Camino2.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: