Camino only - Bug 461610: Handle drag-and-drop validation in bookmark search results. r/sr=pink